# macmix

./: Cargo.toml  README.md  macmix.toml  wiremix.toml
examples/: probe.rs  tap_probe.rs
src/: app.rs  config.rs  main.rs  opt.rs  wirehose.rs
src/config/: names.rs
src/wirehose/: capture.rs  event.rs  event_sender.rs  hal.rs  mute.rs  object_id.rs  property_store.rs  session.rs  state.rs  stream.rs
