# macmix is a macOS/CoreAudio fork of wiremix by Thomas Sowell <tom@ldtlb.com>
# (https://github.com/tsowell/wiremix), reusing its TUI front-end under the
# original MIT OR Apache-2.0 license.
[package]
name = "macmix"
version = "0.11.0"
authors = ["Thomas Sowell <tom@ldtlb.com>"]
description = "A TUI mixer for macOS CoreAudio"
readme = "README.md"
repository = "https://github.com/tsowell/wiremix"
license = "MIT OR Apache-2.0"
categories = ["command-line-utilities", "multimedia::audio"]
keywords = ["mixer", "coreaudio", "macos", "volume", "audio", "tui"]
edition = "2021"
rust-version = "1.74.0"
include = ["src/**/*", "Cargo.toml", "LICENSE*", "README.md", "macmix.toml"]

[dependencies]
anyhow = "1.0.95"
bytemuck = "1.24.0"
# macOS CoreAudio HAL bindings (device enumeration, volume/mute, listeners)
coreaudio-sys = "0.2"
core-foundation-sys = "0.8"
core-foundation = "0.10"
# Objective-C bridge for CATapDescription (output metering via process taps)
objc2 = "0.6"
objc2-core-audio = { version = "0.3", features = ["AudioHardware", "objc2", "objc2-foundation"] }
objc2-foundation = { version = "0.3", features = ["NSArray", "NSString", "NSUUID", "NSValue"] }
clap = { version = "4.5.26", features = ["derive", "wrap_help"] }
crossterm = { version = "0.29.0", features = ["event-stream", "serde"] }
futures = "0.3.31"
futures-timer = "3.0.3"
itertools = "0.14.0"
log = "0.4.24"
# termios special-character lookups for keybinding config (cross-platform)
nix = { version = "0.29.0", features = ["term"] }
pulp = "0.22.2"
ratatui = { version = "0.29.0", features = ["serde"] }
regex = "1.12.3"
scopeguard = "1.2.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.137"
serde_with = "3.12.0"
smallvec = "1.14.0"
toml = "1.0.3"
tracing = { version = "0.1.41", optional = true }
tracing-error = { version = "0.2.1", optional = true }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"], optional = true }

[dev-dependencies]
paste = "1.0.15"

[features]
trace = ["dep:tracing", "dep:tracing-error", "dep:tracing-subscriber"]

[profile.release]
codegen-units = 1
lto = true
